feat: Chatbot added with context